Changed Bckground colour

--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body{
-background-color: #DAF5D5;
+/*background-color: #DAF5D5;*/
 }
 
 
@@ -134,3 +134,5 @@ height:99.5%;
 text-align:center;
 font-size: 1.1em;
 }
+
+
