--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ width:100%;
 height: 20%;
 font-size: 4em;;
 text-align:center;
-font-family:Verdana;
+font-family: 'Arvo', serif;
 color:#28A110;
 }
 
